; ModuleID = '/home/carl/AnghaBench/linux/mm/extr_page-writeback.c_bdi_set_max_ratio.c'
source_filename = "/home/carl/AnghaBench/linux/mm/extr_page-writeback.c_bdi_set_max_ratio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.backing_dev_info = type { i32, i32, i32 }

@EINVAL = common dso_local global i32 0, align 4
@bdi_lock = common dso_local global i32 0, align 4
@FPROP_FRAC_BASE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bdi_set_max_ratio(%struct.backing_dev_info* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.backing_dev_info*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.backing_dev_info* %0, %struct.backing_dev_info** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 0, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp ugt i32 %7, 100
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i32, i32* @EINVAL, align 4
  %11 = sub nsw i32 0, %10
  store i32 %11, i32* %3, align 4
  br label %35

12:                                               ; preds = %2
  %13 = call i32 @spin_lock_bh(i32* @bdi_lock)
  %14 = load %struct.backing_dev_info*, %struct.backing_dev_info** %4, align 8
  %15 = getelementptr inbounds %struct.backing_dev_info, %struct.backing_dev_info* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* %5, align 4
  %18 = icmp ugt i32 %16, %17
  br i1 %18, label %19, label %22

19:                                               ; preds = %12
  %20 = load i32, i32* @EINVAL, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %6, align 4
  br label %32

22:                                               ; preds = %12
  %23 = load i32, i32* %5, align 4
  %24 = load %struct.backing_dev_info*, %struct.backing_dev_info** %4, align 8
  %25 = getelementptr inbounds %struct.backing_dev_info, %struct.backing_dev_info* %24, i32 0, i32 1
  store i32 %23, i32* %25, align 4
  %26 = load i32, i32* @FPROP_FRAC_BASE, align 4
  %27 = load i32, i32* %5, align 4
  %28 = mul i32 %26, %27
  %29 = udiv i32 %28, 100
  %30 = load %struct.backing_dev_info*, %struct.backing_dev_info** %4, align 8
  %31 = getelementptr inbounds %struct.backing_dev_info, %struct.backing_dev_info* %30, i32 0, i32 2
  store i32 %29, i32* %31, align 4
  br label %32

32:                                               ; preds = %22, %19
  %33 = call i32 @spin_unlock_bh(i32* @bdi_lock)
  %34 = load i32, i32* %6, align 4
  store i32 %34, i32* %3, align 4
  br label %35

35:                                               ; preds = %32, %9
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
